# sharedlog-stream-experiments

./: .gitignore  README.md  latency_cmd_log.sh  run_all.sh  run_q1.sh  run_q3.sh  run_q5.sh  run_q7.sh  run_q8.sh
experiment_stats/: .gitignore  exp_figures.ipynb  parse_q8_scaleup.py  scale.ipynb  split.sh
kafka-single-machine/: docker-compose.yml
kafka_cluster/: config.json  docker-compose-base.yml
kafka_entry/: run
latency/: Cargo.toml  plot.py  plot.sh
latency/data/kafka/q4-kafka-180s-0swarm-100ms-src100ms/: README.md
latency/src/: compress.rs  histogram.rs  lib.rs  main.rs  plot.rs
nexmark_kafka-streams/: .gitignore  config.json  docker-compose-base.yml  docker-compose.yml  extract.py  extract_logs.py  generate_sar_svg.py  get_sar.sh  local_invoke.sh  local_test_invoke.sh  nexmark.sh  overall_stats.py  parse_commit_lat.py  parse_e2e_latency.py  parse_result.py  parse_sar.py  parse_sar_cpu.py  parse_stage_time.py  parse_transaction_total_time.py  restart_app_and_source.sh  run_all.sh  run_q1.sh  run_q12.sh  run_q2.sh  run_q3.sh  run_q3_nocache.sh  run_q4.sh  run_q467.sh  run_q467_nocache.sh  run_q5.sh  run_q5_nocache.sh  run_q6.sh  run_q7.sh  run_q8.sh  run_q8_10ms.sh  run_q8_nobatch.sh  run_q8_nobatch_10ms.sh  run_q8_nocache.sh
nexmark_kafka-streams_metrics/: .gitignore  config.json  docker-compose-base.yml  docker-compose.yml  generate_sar_svg.py  nexmark.sh  overall_stats.py  parse_commit_lat.py  parse_sar.py  parse_sar_cpu.py  parse_stage_time.py  parse_transaction_total_time.py  run_q8.sh
nexmark_sharedlog/: .gitignore  common.yml  extract.py  (+99 more)
(+8410 files in other folders)
