[package]
name = "latency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["derive"] }
flate2 = "1.0"
hdrhistogram = "7.5"
plotters = "0.3"
walkdir = "2.3"
